2011-10-19  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: get rid of manual view hierarchy management.
        https://bugs.webkit.org/show_bug.cgi?id=70417

        Reviewed by Yury Semikhatsky.

        * inspector/view-events-expected.txt:
        * inspector/view-events.html:

2011-10-20  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Enable support for advanced search in script's static content provider.
        https://bugs.webkit.org/show_bug.cgi?id=70354

        Reviewed by Pavel Feldman.

        * http/tests/inspector/search/search-in-static-expected.txt: Added.
        * http/tests/inspector/search/search-in-static.html: Added.

2011-10-20  Kentaro Hara  <haraken@chromium.org>

        Implement a MessageEvent constructor for V8
        https://bugs.webkit.org/show_bug.cgi?id=70296

        Reviewed by Adam Barth.

        Enabled message-event-constructor.html for chromium,
        since now V8 has the MessageEvent constructor.

        * platform/chromium/test_expectations.txt:
        * platform/chromium/fast/events/constructors/message-event-constructor-expected.txt: Added.

2011-10-20  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip failing test in GTK.

        * platform/gtk/Skipped: Skip fast/events/drag-selects-image.html

2011-10-18  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: encode source map url as source map page url query parameter.
        https://bugs.webkit.org/show_bug.cgi?id=70327

        Reviewed by Pavel Feldman.

        * http/tests/inspector/compiler-source-mapping-provider.html:
        * http/tests/inspector/resources/compiler-source-mapping-provider/app-map.html:

2011-10-20  Yuzo Fujishima  <yuzo@google.com>

        [chromium] Yet another test expectation change for platform/chromium/compositing/zoom-animator-scale-test2.html

        Unreviewed.

        * platform/chromium/test_expectations.txt:

2011-10-20  Philippe Normand  <pnormand@igalia.com>
